[package]
name = "rts2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.11.0"
pixels = "0.13.0"
rand = "0.8.5"
raqote = "0.8.3"
rayon = "1.8.0"
winit = { version = "0.29.3", features = ["rwh_05"]}
winit_input_helper = "0.15.0"

#winit = "0.29"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }

image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
